# RL_ODS_Autumn

./: README.md
practice/1. Cross-Entropy method/: pyproject.toml  seminar.ipynb  seminar.py
practice/1. Cross-Entropy method/homework/: result_1.csv  salimov_practice1_1.py  salimov_practice1_2.py  salimov_practice1_3.py
